# Copyright 2011,2012 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.

########################################################################
# Setup library
########################################################################
include(GrPlatform) #define LIB_SUFFIX

include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIRS})

list(APPEND bats_sources
    chip_decoder_impl.cc
    varicodes.cc
    psk31_encoder_impl.cc
    psk31_decoder_impl.cc
    simple_mac_impl.cc
)
list(APPEND bats_libs
    ${Boost_LIBRARIES}
    ${GNURADIO_RUNTIME_LIBRARIES}
    gnuradio-blocks
)

add_library(gnuradio-bats SHARED ${bats_sources})
target_link_libraries(gnuradio-bats ${bats_libs})
set_target_properties(gnuradio-bats PROPERTIES DEFINE_SYMBOL "gnuradio_bats_EXPORTS")

########################################################################
# Install built library files
########################################################################
install(TARGETS gnuradio-bats
    LIBRARY DESTINATION lib${LIB_SUFFIX} # .so/.dylib file
    ARCHIVE DESTINATION lib${LIB_SUFFIX} # .lib file
    RUNTIME DESTINATION bin              # .dll file
)
